--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@tailwindcss/vite": "^4.1.11",
         "@tanstack/react-router": "^1.129.2",
         "@tanstack/react-start": "^1.129.2",
+        "qr-code-styling": "^1.9.2",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "tailwindcss": "^4.1.11",
